[gd_scene load_steps=4 format=3 uid="uid://m0w5g3sw28wi"]

[ext_resource type="Script" uid="uid://cfext5q0peaig" path="res://weapons/rifle.gd" id="1_0p17f"]
[ext_resource type="Texture2D" uid="uid://cipcyy1by6udi" path="res://weapons/rifle.png" id="1_80f5w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1bic"]
size = Vector2(90, 28)

[node name="Rifle" type="Area2D"]
script = ExtResource("1_0p17f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(102, -2)
shape = SubResource("RectangleShape2D_r1bic")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Rifle" type="Sprite2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(102, -1)
scale = Vector2(0.11255, 0.11255)
texture = ExtResource("1_80f5w")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Rifle"]
unique_name_in_owner = true
position = Vector2(399.823, -53.3097)

[node name="ShootingSpeed" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5

[connection signal="timeout" from="ShootingSpeed" to="." method="_on_shooting_speed_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
